# biosignalml-browser

./: FUTURE.rst  QtBrowser.spec  README.rst  pyproject.toml  treemodel.py
chart/: .gitignore  QtBrowser.icns  QtBrowser.py  RELEASE.rst  annotation.py  chart2.ui  chartform.py  chartplot.py  mainwindow.py  nrange.py  runchart.py  runchart.spec  setup.py  signaltable.py  table.py  treemain.py  treemodel.py  widgets.py  winsetup.py
chart/embc/: noble.bsml
chart/ui/: Makefile  annotate.ui  annotationlist.ui  chart.ui  controller.ui  repo.ui  scroller.ui  signallist.ui
query/: .gitignore  Makefile  browser.py  combobox.py  config.py  config.ttl  expr.ui  query.ui  queryexpr.py  queryform.py  queryterm.py  resultsview.py  runscroll.py  scroll.ui  simple.py  sparql.py  term.ui  termgrid.py  tgrid.ui  tree.py  treebrowser.py
query/ui/: Makefile  results.ui  scroll.ui  treeresults.ui
