[tool.poetry]
name = "QtBrowser"
version = "0.5.0-a.1"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
biosignalml = {url = "https://github.com/BioSignalML/biosignalml-python/releases/download/v0.7.0-a.1/biosignalml-0.7.0a1-py3-none-any.whl"}
pyqt6 = "^6.5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
